feat: add helper endpoints
